# insait-ai-response

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt  run.py  sonet.py  the_run.py
app/: __init__.py  config.py  models.py
app/resources/: README.md  __init__.py  main.py  schemas.py  users.py  view.py
app/services/: auth.py  openai_service.py
migrations/: env.py
migrations/versions/: 1366232ff0f6_initial_migration.py
tests/: config.py  conftest.py  test_errors.py  test_generated_text.py  test_models.py  test_services.py  test_users.py
