[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "Your project description"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2"
Flask-SQLAlchemy = "^3.0"
Flask-Bcrypt = "^1.0"
Flask-JWT-Extended = "^4.0"

psycopg2-binary = "^2.9"
openai = "^0.27"
Alembic = "^1.9"
Flask-Smorest = "^0.32"
pytest = "^7.0"
pytest-flask = "^1.2"

flask-marshmallow = "^0.14"


[tool.poetry.dev-dependencies]
# You can include any development dependencies here if needed
